--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ author: Tiago Espinha
 logo: http://etiago.github.io/static/img/avatar.png
 github: https://github.com/etiago
 about: "Tiago's Tech Blog"
-disqus_shortname: aboutashu
-google_analytics: UA-72862926-1
+disqus_shortname: tiagostechblog
+google_analytics: UA-5075580-2
 urls:
     - text: Home
       url: /
