--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ deploy:
   image: amazon/aws-cli:2.0.50
   before_script:
     - ''
+  entrypoint: [""]
   stage: deploy
   script:
     #- ls _deploy/
