--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,10 +23,11 @@ install-and-build:
       - _deploy/
 
 deploy:
-  image: amazon/aws-cli:2.0.50
+  image: 
+    name: amazon/aws-cli:2.0.50
+    entrypoint: [""]
   before_script:
     - ''
-  entrypoint: [""]
   stage: deploy
   script:
     #- ls _deploy/
