--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,17 @@
 default:
   image: ruby:2.7
+  cache:
+    untracked: true
+    key: "$CI_BUILD_REF_NAME"
+    paths:
+      - cache/bundler/
   before_script:
     - apt-get update
     - apt-get install -y sqlite3 libsqlite3-dev nodejs
     - ruby -v
     - which ruby
     - gem install bundler --no-document
-    - bundle install --jobs $(nproc) "${FLAGS[@]}"
+    - bundle install --jobs $(nproc) "${FLAGS[@]}" --path=cache/bundler
 
 stages:
   - build
