--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ install-and-build:
     paths:
       - cache/bundler/
   script:
-    - jekyll b
+    - cache/bundler/ruby/2.7.0/bin/jekyll b
   artifacts:
     name: "deployable"
     expire_in: "1 day"
