--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ about: "Tiago's Tech Blog"
 destination: _deploy
 disqus_shortname: tiagostechblog
 google_analytics: UA-5075580-2
+exclude: [cache]
 urls:
     - text: Home
       url: /
