--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,6 @@ deploy:
   stage: deploy
   script:
     #- ls _deploy/
-    - aws s3 sync _deploy/ s3://tmp-tiagoespinha.net/ --region eu-west-2 --delete
+    - aws s3 sync _deploy/ s3://tiagoespinha.net/ --region eu-west-2 --delete
   dependencies:
     - install-and-build
